[package]
name = "data_visiualization_work"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tsne"
path = "src/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
numpy = "0.21.0"
ndarray = { version = "0.15.6", features = ["matrixmultiply-threading", "rayon"] }
ndarray-rand = "0.14.0"
